--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -9,7 +9,16 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@dynamic-labs/algorand": "^3.6.3",
+    "@dynamic-labs/cosmos": "^3.6.3",
+    "@dynamic-labs/ethereum": "^3.6.3",
+    "@dynamic-labs/sdk-react-core": "^3.6.3",
+    "@dynamic-labs/wagmi-connector": "^3.6.3",
+    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
+    "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
     "@radix-ui/react-slot": "^1.1.0",
+    "@tanstack/react-query": "^5.60.5",
+    "algosdk": "^3.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.460.0",
@@ -20,7 +29,9 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.28.0",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "viem": "^2.21.45",
+    "wagmi": "^2.12.33"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
