--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -16,8 +16,11 @@
     "@dynamic-labs/wagmi-connector": "^3.6.3",
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
+    "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.2",
     "@tanstack/react-query": "^5.60.5",
+    "@yudiel/react-qr-scanner": "^2.0.8",
     "algosdk": "^3.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -27,6 +30,7 @@
     "react-blockies": "^1.4.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-qr-reader": "^3.0.0-beta-1",
     "react-router-dom": "^6.28.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
