--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -18,6 +18,7 @@
     "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-query": "^5.60.5",
+    "@wagmi/connectors": "^5.4.0",
     "algosdk": "^3.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
