--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -7,6 +7,7 @@
     "@nomicfoundation/hardhat-chai-matchers": "^1.0.0",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
     "@nomicfoundation/hardhat-toolbox": "2.*",
+    "@nomicfoundation/hardhat-verify": "1",
     "@nomiclabs/hardhat-ethers": "^2.2.3",
     "@nomiclabs/hardhat-etherscan": "^3.0.0",
     "@openzeppelin/contracts": "^4.9.6",
