--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -16,6 +16,8 @@
     "@dynamic-labs/wagmi-connector": "^3.6.3",
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
+    "@privy-io/react-auth": "^1.94.2",
+    "@privy-io/wagmi": "^0.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.2",
