--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-toast": "^1.2.2",
     "@tanstack/react-query": "^5.60.5",
     "@wagmi/connectors": "^5.4.0",
+    "@wagmi/core": "^2.18.1",
     "@yudiel/react-qr-scanner": "^2.0.8",
     "algosdk": "^3.0.0",
     "class-variance-authority": "^0.7.0",
@@ -45,13 +46,13 @@
     "@types/react-blockies": "^1.4.4",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
-    "autoprefixer": "^10.4.20",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.13.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
-    "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.15",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
     "vite": "^5.4.10"
